# Plone

./: .gitattributes  .gitignore  CHANGES.md  CHANGES.rst  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  README.txt  README_moved_to_github.txt  pyproject.toml  setup.cfg  setup.py
4.0/: README.txt
4.0/Products/CMFPlone/: ActionsTool.py  CalendarTool.py  CatalogTool.py  FactoryTool.py  InterfaceTool.py  PloneControlPanel.py  Portal.py  QuickInstallerTool.py  RegistrationTool.py  TypesTool.py  URLTool.py  UnicodeSplitter.py  WorkflowTool.py  __init__.py  meta.zcml  overrides.zcml  setuphandlers.py
4.0/Products/CMFPlone/browser/: interfaces.py  navtree.py
4.0/Products/CMFPlone/exportimport/: configure.zcml  controlpanel.py
4.0/Products/CMFPlone/interfaces/: Translatable.py  __init__.py  migration.py  view.py
4.0/Products/CMFPlone/patches/: addzmisecuritywarning.py
4.0/Products/CMFPlone/tests/: LoginAndLogout.txt  link_redirect_view.txt  redirection.txt  testActionsTool.py  testBrowserDefaultScripts.py  testCatalogTool.py  testCheckId.py  testExternalEditorEnabled.py  testFolderButtons.py  testInterfaceTool.py  testMigrationTool.py  testPloneFolder.py  testUnicodeSplitter.py  test_functional.py
4.0/Products/CMFPlone/www/: migrationRun.dtml  portal_factory_manage_types.zpt
4.0/docs/: RELEASENOTES.txt
Products/CMFPlone/: ActionIconsTool.py  ActionsTool.py  CalendarTool.py  CatalogTool.py  DiscussionTool.py  FactoryTool.py  HISTORY.txt  InterfaceTool.py  LargePloneFolder.py  MemberDataTool.py  MembershipTool.py  MetadataTool.py  MigrationTool.py  PloneBaseTool.py  PloneControlPanel.py  PloneFolder.py  PloneTool.py  Portal.py  PropertiesTool.py  QuickInstallerTool.py  RegistrationTool.py  SkinsTool.py  SyndicationTool.py  ToolNames.py  TranslationServiceTool.py  TypesTool.py  URLTool.py  UndoTool.py  UnicodeSplitter.py  WorkflowTool.py  __init__.py  catalog.zcml  configure.zcml  deprecated.zcml  factory.py  i18nl10n.py  meta.zcml  overrides.zcml  setuphandlers.py  utils.py  (+2 more)
Products/CMFPlone/UnicodeSplitter/: __init__.py  config.py  monkey.py  splitter.py
Products/CMFPlone/browser/: admin.py  admin.zcml  configure.zcml  frontpage.pt  frontpage.py  interfaces.py  jsvariables.py  navigation.py  navtree.py  overview.pt  overview.py  plone-admin-ui.css  ploneview.py
Products/CMFPlone/exportimport/: configure.zcml  controlpanel.py  factorytool.py  memberdata_properties.py  propertiestool.py
Products/CMFPlone/interfaces/: ConstrainTypes.py  NonStructuralFolder.py  OrderedContainer.py  Translatable.py  __init__.py  siteroot.py  translations.py  translationservice.py
Products/CMFPlone/migrations/: __init__.py  configure.zcml  migration_util.py  steps.zcml
Products/CMFPlone/patches/: __init__.py  addzmiplonesite.py  addzmiquickstart.py  addzmisecuritywarning.py  catalogPatch.py  csrf.py  interfacePatch.py  iso8601.py  quick_start.zpt  securemailhost.py  sendmail.py  speed.py  unicodehacks.py
Products/CMFPlone/setup/: dependencies.py
Products/CMFPlone/tests/: AddMoveAndDeleteDocument.txt  LoginAndLogout.txt  PloneTestCase.py  browser.txt  browser_collection_views.txt  csrf.txt  default_error_message.txt  dummy.py  emaillogin.txt  link_redirect_view.txt  mails.txt  member_search.txt  messages.txt  redirection.txt  scripts.txt  testActionIconsTool.py  testActionsTool.py  testBrowserDefault.py  testBrowserLayerPrecedence.py  testCSRFProtection.py  testCSSandJSRegistry.py  testCalendarTool.py  testCatalogTool.py  testContentPublishing.py  testContentTypeScripts.py  testContentTypes.py  testControlPanel.py  testControlPanelScripts.py  testControlPanelUsersAndGroups.py  testCookieAuth.py  testDateTimeIntegration.py  testEmailLogin.py  testExternalEditorEnabled.py  testFolderButtons.py  testGroupUserFolder.py  testInterfaces.py  testMainTemplate.py  testMembershipTool.py  testMigrations.py  testNavTree.py  (+21 more)
Products/CMFPlone/www/: addSite.zpt  membershipRolemapping.dtml  migrationResults.dtml  migrationRun.dtml
docs/: BACKWARDS_COMPATIBILITY.txt  CHANGES.rst  CHANGES.txt  HISTORY.txt  LICENSE.txt  NEWS.txt  RELEASENOTES.txt  UPGRADE.txt
(+380 files in other folders)
