[metadata]
version = 6.0.0a1.dev0
name = Plone
description = The Plone Content Management System
long_description = file: README.rst, docs/CHANGES.rst
classifiers=[
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Plone
    Framework :: Plone :: Core
    Framework :: Plone :: 6.0
    Framework :: Zope
    Framework :: Zope :: 5
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
keywords = Plone, CMF, Python, Zope, CMS
author = Plone Foundation
author_email = releaseteam@plone.org
url = http://plone.org/
license = GPL version 2

[options]
include_package_data = True
zip_safe = False
packages =
install_requires =
    setuptools
    plone.restapi
    plone.app.caching
    plone.app.iterate
    plone.app.upgrade
    Products.CMFPlacefulWorkflow
    Products.CMFPlone
    setuptools>=36.2

[bdist_wheel]
universal = 1

[zest.releaser]
create-wheel = yes
