[metadata]
version = 6.1.1
name = Plone
description = The Plone Content Management System
long_description = file: README.md, CHANGES.md
long_description_content_type = text/markdown
classifiers=
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Plone
    Framework :: Plone :: Core
    Framework :: Plone :: 6.1
    Framework :: Zope
    Framework :: Zope :: 5
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
keywords = Plone, CMF, Python, Zope, CMS
author = Plone Foundation
author_email = releaseteam@plone.org
url = https://plone.org/
license = GPL version 2
project_urls=
    Homepage=https://plone.org
    Documentation=https://6.docs.plone.org
    Forum=https://community.plone.org/
    Chat=https://discord.gg/zFY3EBbjaj
    Mastodon=https://plone.social/@plone
    Twitter=https://twitter.com/plone
    Videos=https://youtube.com/@plonecms
    Sponsor=https://github.com/sponsors/plone

[options]
include_package_data = True
zip_safe = False
packages =
python_requires = >= 3.10
install_requires =
    setuptools>=36.2
    plone.app.caching
    plone.app.discussion
    plone.app.iterate
    plone.app.multilingual
    plone.app.upgrade
    plone.classicui
    plone.restapi
    plone.volto
    Products.CMFPlacefulWorkflow
    Products.CMFPlone

[bdist_wheel]
universal = 0
